feat: Add virtual island scanning, complexity analysis, and living sector scans with updated `geom_atoms` and new data/plots.

--- a/name3.tex
+++ b/name3.tex
@@ -4813,6 +4813,353 @@ P(\text{add atom } Z \text{ at } x) \propto \exp\left(-\frac{\Delta F_{\text{mol
 \end{itemize}
 Результаты (см. R\&D отчет) демонстрируют спонтанное возникновение дендримеров и каркасных структур, напоминающих базовую органику.
 
+\subsection{Закон четырёх спектральных ролей в плоскости $(D,A)$}
+
+В геометрической Таблице каждому элементу $Z$ сопоставляются два
+безразмерных индекса:
+донорный $D(Z)$ и акцепторный $A(Z)$,
+вычисляемые из спектральной электроотрицательности $\chi_{\text{spec}}(Z)$
+и эффективной портовой энергии $E_{\text{port}}(Z)$:
+\[
+D(Z) = \frac{\max\{-\chi_{\text{spec}}(Z), 0\}}{E_{\text{port}}(Z)},\qquad
+A(Z) = \frac{\max\{\ \chi_{\text{spec}}(Z), 0\}}{E_{\text{port}}(Z)}.
+\]
+
+В плоскости $(D,A)$ элементы распадаются на четыре устойчивых сектора,
+которые интерпретируются как эффективные спектральные роли
+\emph{донор}, \emph{акцептор}, \emph{амфотерный центр} и \emph{инертный}.
+
+\paragraph{Закон четырёх спектральных ролей.}
+Существует набор порогов
+$D_\text{min} > 0$, $A_\text{min} > 0$ и $A_\text{strong} > A_\text{min}$,
+таких что для элементов лёгких периодов (H--Ar в версии v4.0) выполняется:
+
+\begin{enumerate}
+  \item \textbf{Донорный сектор} $\mathcal{D}$:
+  \[
+  D(Z) \ge D_\text{min}, \qquad A(Z) < A_\text{min}.
+  \]
+  Элементы из $\mathcal{D}$ ведут себя как устойчивые спектральные доноры
+  (металлы). В геометрической Таблице v4.0 сюда попадают
+  \[
+    \text{Li, Na (terminator), Be, Mg (bridge)}.
+  \]
+  При фиксированной роле (terminator / bridge) донорный индекс $D(Z)$
+  квантуется по узким плато, почти не зависящим от атомного номера
+  внутри группы.
+
+  \item \textbf{Акцепторный сектор} $\mathcal{A}$:
+  \[
+  A(Z) \ge A_\text{strong}, \qquad D(Z) < D_\text{min}.
+  \]
+  Элементы из $\mathcal{A}$ являются сильными спектральными акцепторами
+  (неметаллами, кислотными центрами). В режиме v4.0 все они лежат практически
+  на одном плато по акцепторному индексу:
+  \[
+    A(Z) \approx A_\text{strong} \simeq 1.24,
+  \]
+  что реализует \emph{универсальный уровень жадности} для набора
+  \[
+    \text{H, N, O, F, P, S, Cl}.
+  \]
+
+  \item \textbf{Амфотерный сектор} $\mathcal{C}$ (центры):
+  \[
+  A_\text{min} \le A(Z) < A_\text{strong}, \qquad D(Z) \lesssim D_\text{min},
+  \]
+  причём элементы этого сектора в Таблице v4.0 являются хабами по
+  геометрической роли. Они выступают как слабые акцепторы и
+  универсальные центры связности (``скелет'' молекул и кристаллических
+  каркасов):
+  \[
+    \text{B, C, Al, Si}.
+  \]
+
+  \item \textbf{Инертный сектор} $\mathcal{I}$:
+  \[
+  D(Z) \approx 0, \qquad A(Z) \approx 0.
+  \]
+  Здесь находятся элементы, практически выключенные из спектрального
+  обмена с окружением. В диапазоне H--Ar сюда попадают
+  благородные газы
+  \[
+    \text{He, Ne, Ar}.
+  \]
+\end{enumerate}
+
+Численные значения порогов в реализации v4.0 выбираются из
+наблюдаемой структуры плато:
+\[
+D_\text{min} \approx 0.1,\qquad
+A_\text{min} \approx 0.05,\qquad
+A_\text{strong} \approx 1.2.
+\]
+Эти значения могут уточняться при расширении Таблицы на более тяжёлые
+элементы, но сама четырёхсекторная структура плоскости $(D,A)$
+остаётся инвариантной: каждый элемент в модели однозначно попадает
+в донорный, акцепторный, амфотерный или инертный сектор.
+
+\paragraph{Следствие (кластеризация H--Ar).}
+В численной реализации geom-spec v4.0 для элементов первого и второго
+периода (H--Ar) индексы $(D,A)$ образуют следующие кластеры:
+
+\begin{itemize}
+  \item Доноры:
+    \[
+      \mathcal{D} = \{\text{Li, Na, Be, Mg}\}.
+    \]
+  \item Сильные акцепторы:
+    \[
+      \mathcal{A} = \{\text{H, N, O, F, P, S, Cl}\}.
+    \]
+  \item Амфотерные центры:
+    \[
+      \mathcal{C} = \{\text{B, C, Al, Si}\}.
+    \]
+  \item Инертные:
+    \[
+      \mathcal{I} = \{\text{He, Ne, Ar}\}.
+    \]
+\end{itemize}
+
+Таким образом, геометрическая Таблица автоматически воспроизводит
+классическое разделение на металлы, неметаллы, амфотерные элементы
+и благородные газы на языке спектральных индексов $(D,A)$.
+
+\subsection{Геометрический закон ролей атома}
+
+В геометрической Таблице каждому элементу сопоставляется не только
+спектральная пара индексов $(D,A)$, но и \emph{геометрическая роль}
+атомного графа:
+terminator (концевой узел), bridge (мост), hub (узел-соединитель) или
+inert (замкнутая конфигурация без портов).
+
+В диапазоне H--Ar (geom-spec v4.0) наблюдается устойчивая связь между
+геометрическими ролями и спектральными секторами из Закона четырёх
+спектральных ролей.
+
+\paragraph{Геометрический закон ролей.}
+Пусть $Z$~--- элемент с ролью $r(Z)\in\{\text{terminator},\text{bridge},
+\text{hub},\text{inert}\}$ и индексами $(D(Z),A(Z))$.
+Тогда в модели v4.0 выполняются следующие соответствия:
+
+\begin{enumerate}
+  \item \textbf{Terminator-узлы как крайние доноры и акцепторы.}
+  Если $r(Z)=\text{terminator}$ и знак спектральной электроотрицательности
+  $\chi_{\text{spec}}(Z)$ отрицателен, то элемент попадает в донорный
+  сектор $\mathcal{D}$:
+  \[
+    r(Z)=\text{terminator},\quad \chi_{\text{spec}}(Z)<0
+    \ \Rightarrow\  Z\in\mathcal{D}.
+  \]
+  Это реализуется для щёлочных металлов
+  $\{\text{Li, Na}\}$.
+  При положительной $\chi_{\text{spec}}(Z)$ terminator-узел становится
+  сильным акцептором и попадает в сектор $\mathcal{A}$:
+  \[
+    r(Z)=\text{terminator},\quad \chi_{\text{spec}}(Z)\gg 0
+    \ \Rightarrow\  Z\in\mathcal{A}
+  \]
+  (элементы H, F, Cl).
+
+  \item \textbf{Bridge-узлы как двухпортовые доноры/акцепторы.}
+  Для двухпортовых мостов $r(Z)=\text{bridge}$ знак $\chi_{\text{spec}}$
+  определяет ориентацию потока:
+  \[
+    \chi_{\text{spec}}(Z)>0 \Rightarrow Z\in\mathcal{D},\qquad
+    \chi_{\text{spec}}(Z)<0 \Rightarrow Z\in\mathcal{A},
+  \]
+  что реализует донорный мост (Be, Mg) и акцепторный мост (O, S).
+
+  \item \textbf{Hub-узлы как амфотерные центры.}
+  Для многопортовых узлов $r(Z)=\text{hub}$ при малом
+  $|\chi_{\text{spec}}(Z)|$ элемент попадает в амфотерный сектор
+  $\mathcal{C}$:
+  \[
+    r(Z)=\text{hub},\quad |\chi_{\text{spec}}(Z)|\ll 1
+    \ \Rightarrow\  Z\in\mathcal{C},
+  \]
+  что соответствует элементам B, C, Al, Si --- слабым акцепторам и
+  универсальным центрам каркаса молекул.
+  При достаточно большой положительной $\chi_{\text{spec}}(Z)$ тот же
+  тип узла становится сильным акцептором:
+  \[
+    r(Z)=\text{hub},\quad \chi_{\text{spec}}(Z)\gg 0
+    \ \Rightarrow\  Z\in\mathcal{A}
+  \]
+  (элементы N и P).
+
+  \item \textbf{Inert-узлы как спектральные изоляторы.}
+  Для конфигураций $r(Z)=\text{inert}$ с нулевым числом портов
+  автоматически получается
+  \[
+    D(Z)\approx 0,\qquad A(Z)\approx 0,
+  \]
+  то есть элементы He, Ne, Ar лежат в инертном секторе $\mathcal{I}$ и
+  практически выключены из спектрального обмена.
+\end{enumerate}
+
+Таким образом, четыре спектральных сектора $(\mathcal{D},\mathcal{A},
+\mathcal{C},\mathcal{I})$ совпадают с четырьмя геометрическими типами
+узлов атомного графа (terminator, bridge, hub, inert) после учёта знака
+и величины $\chi_{\text{spec}}(Z)$. Геометрия и спектр оказываются двумя
+проекциями одного и того же закона ролей атома.
+
+\subsection{Законы плато донорно-акцепторных индексов}
+
+Как было введено ранее, каждому элементу в геометрической Таблице
+сопоставляются индексы $(D(Z),A(Z))$, определяющие его спектральную
+донорную и акцепторную способность на один валентный порт. В численной
+версии geom-spec v4.0 для элементов главных подгрупп до Kr наблюдается
+ряд устойчивых плато по этим индексам.
+
+\paragraph{Закон донорных плато (s-блок).}
+Для элементов первой и второй группы (s-блок) донорный индекс $D(Z)$
+при фиксированной группе практически не зависит от периода и принимает
+значения на узких плато:
+
+\begin{itemize}
+  \item для щёлочных металлов (группа~1)
+  \[
+    Z \in \{\mathrm{Li},\mathrm{Na},\mathrm{K}\} \ \Rightarrow\
+    D(Z) \approx D_{\text{alkali}} \simeq 0.19,\quad A(Z) \approx 0,
+  \]
+  \item для щёлочноземельных металлов (группа~2)
+  \[
+    Z \in \{\mathrm{Be},\mathrm{Mg},\mathrm{Ca}\} \ \Rightarrow\
+    D(Z) \approx D_{\text{alkaline}} \simeq 0.31,\quad A(Z) \approx 0.
+  \]
+\end{itemize}
+
+Таким образом, в первом приближении донорная способность s-блока
+определяется \emph{только номером группы}, а не номером периода: элементы
+одной вертикальной колонки образуют общее плато $D(Z)$ на один порт.
+Эта самоподобность по вертикали отвечает классическому ``семейству''
+Li--Na--K и Be--Mg--Ca в химической периодической таблице.
+
+\paragraph{Закон универсального p-акцепторного плато.}
+Для p-блока с незаполненной валентной оболочкой (кроме пред-акцепторов,
+см. ниже) акцепторный индекс $A(Z)$ в модели v4.0 концентрируется на
+одном универсальном плато:
+
+\[
+  Z \in \{\mathrm{C},\mathrm{N},\mathrm{O},\mathrm{F},
+           \mathrm{Si},\mathrm{P},\mathrm{S},\mathrm{Cl},
+           \mathrm{Ge},\mathrm{As},\mathrm{Se},\mathrm{Br}\}
+   \ \Rightarrow\
+   A(Z) \approx A_{\text{p}} \simeq 1.24,\quad D(Z)\approx 0.
+\]
+
+Это можно интерпретировать как \emph{универсальную p-акцепторную
+площадку}: детали химии (силы связей, длины, точные энергии) зависят от
+геометрии и абсолютной величины $\chi_{\text{spec}}(Z)$, но плотность
+акцепторной ``жадности'' на один порт у всех этих элементов
+оказывается практически одинаковой. В этом смысле модель реализует
+спектральный аналог правила октета: само наличие неполной p-оболочки
+важнее конкретного $Z$.
+
+\paragraph{Закон пред-акцепторов (B, Al, Ga).}
+Для элементов с небольшим положительным сдвигом спектральной
+электроотрицательности, лежащих ниже основного p-плато, формируется
+отдельное слабое акцепторное плато:
+
+\[
+  Z \in \{\mathrm{B},\mathrm{Al},\mathrm{Ga}\}
+   \ \Rightarrow\
+   A(Z) \approx A_{\text{weak}} \simeq 0.12,\quad D(Z)\approx 0,
+\]
+где $A_{\text{weak}} \ll A_{\text{p}}$. Эти элементы занимают
+\emph{амфотерную пред-акцепторную} позицию: они уже не доноры, но и не
+полноценные p-акцепторы. В реальной химии это проявляется как слабая
+Льюисова кислотность и способность выступать в роли мягких акцепторов и
+допантов в ковалентных каркасах (B, Al, Ga в сетках на основе C/Si/Ge).
+
+Наличие двух чётко различимых плато $A_{\text{weak}}$ и $A_{\text{p}}$
+даёт спектральный критерий отделения мягких амфотерных центров от
+жёстких неметаллических акцепторов внутри p-блока.
+
+Наличие двух чётко различимых плато $A_{\text{weak}}$ и $A_{\text{p}}$
+даёт спектральный критерий отделения мягких амфотерных центров от
+жёстких неметаллических акцепторов внутри p-блока.
+
+
+\paragraph{Закон живых спектральных секторов.}
+
+Рассмотрим рост молекулярного дерева при фиксированных параметрах
+роста (модуль \texttt{grower.py}) и спектральном режиме v4. Для
+каждого элемента $Z$ зададим донорно--акцепторные индексы $(D_Z,A_Z)$,
+вычисленные по геометрической Таблице (раздел~\ref{sec:geom-table-v4}).
+Пусть $C[G]$~--- топологический функционал сложности графа
+(раздел~\ref{sec:geom-complexity}).
+
+Численный эксперимент показывает, что:
+
+\begin{itemize}
+  \item если $(D_Z,A_Z)$ лежит на \emph{сильном акцепторном плато}
+  \[
+    D_Z \approx 0,\qquad A_Z \approx 1.24,
+  \]
+  (элементы C, N, O, Si, P, S, Ge, As, Se, Br и т.~д.), то при росте
+  ёлочного дерева максимальная наблюдаемая сложность
+  $C_{\max}(Z)$ и средний размер молекулы $\langle N(Z)\rangle$
+  существенно возрастают при увеличении глубины роста; такие элементы
+  образуют ``живые'' спектральные сектора;
+
+  \item если $(D_Z,A_Z)$ лежит на донорных плато ($A_Z\approx 0$,
+  $D_Z\simeq 0.19$ или $D_Z\simeq 0.31$) либо в чисто инертном секторе,
+  то $C_{\max}(Z)$ и $\langle N(Z)\rangle$ остаются малыми и слабо
+  зависят от глубины роста; соответствующие элементы выступают в роли
+  фоновых доноров и терминаторов ветвей;
+
+  \item элементы слабого акцепторно-амфотерного плато
+  ($A_Z\approx 0.124$, $D_Z\approx 0$; B, Al, Ga) дают промежуточные
+  значения сложности и легко встраиваются в ``живые'' скелеты,
+  построенные на сильном акцепторном плато.
+\end{itemize}
+
+В этом смысле ``живыми'' называются спектральные сектора геометрической
+Таблицы, для которых стохастический рост молекулярного дерева порождает
+иерархию всё более сложных графов, а ``мертвыми''~--- сектора, в которых
+рост быстро вырождается в простые ионические или инертные
+конфигурации.
+
+\paragraph{Закон острова допустимых виртуальных элементов.}
+
+Введём виртуальный элемент $X(p,\varepsilon)$ с числом валентных
+портов $p\in\{1,2,3,4\}$ и спектральной глубиной $\varepsilon<0$.
+В спектральном режиме v4 подменим в Таблице один из элементов
+на $X$ и построим несколько простейших молекул с его участием
+(модуль \texttt{make\_virtual\_molecule}). Для каждой пары
+$(p,\varepsilon)$ определим спектральную электроотрицательность
+$\chi_X(p,\varepsilon)$ и максимальную по модулю энергию связей
+$|F_{\max}(p,\varepsilon)|$.
+
+Численный скан в диапазоне
+\[
+  p = 1,2,3,4,\qquad \varepsilon\in[-6.0,-0.1]
+\]
+показывает существование \emph{широкого острова допустимых
+виртуальных элементов}:
+
+\begin{itemize}
+  \item во всём этом окне энергии связей остаются в умеренном диапазоне
+  $|F_{\max}|\sim 8\text{--}13$ (в тех же единицах, что и для реальных
+  элементов), а спектральная электроотрицательность $\chi_X$ меняется
+  в узком коридоре $0.13\lesssim\chi_X\lesssim 1.95$;
+
+  \item все просканированные комбинации в этом окне порождают
+  устойчивые молекулярные конфигурации, сопоставимые по энергиям с
+  реально наблюдаемыми элементами первых трёх периодов.
+\end{itemize}
+
+Реальные $s/p$-элементы периодической Таблицы с $p\leq 4$ в этой
+картине интерпретируются как дискретный набор точек на непрерывном
+острове допустимых спектральных параметров $(p,\varepsilon)$.
+Гипотеза модели состоит в том, что за пределами этого острова
+(при больших $p$ или малых по модулю $\varepsilon$) устойчивые
+атомоподобные конфигурации Среды исчезают.
+
+
 \section{Текущий охват модели (``зелёная зона'')}
 \label{sec:status-green}
 
