--- a/name3.tex
+++ b/name3.tex
@@ -5156,11 +5156,379 @@ $|F_{\max}(p,\varepsilon)|$.
 картине интерпретируются как дискретный набор точек на непрерывном
 острове допустимых спектральных параметров $(p,\varepsilon)$.
 Гипотеза модели состоит в том, что за пределами этого острова
-(при больших $p$ или малых по модулю $\varepsilon$) устойчивые
-атомоподобные конфигурации Среды исчезают.
+  (при больших $p$ или малых по модулю $\varepsilon$) устойчивые
+  атомоподобные конфигурации Среды исчезают.
+  
+  \paragraph{Закон живых хабов.}
+  
+  Рассмотрим стохастический процесс роста молекулярного дерева на основе
+  геометрической Таблицы: на каждом шаге к существующему графу $G$ добавляется
+  новый атом $v$ с ролью $\mathrm{role}(v)\in\{\text{terminator},
+  \text{bridge},\text{hub}\}$ согласно донорно--акцепторным индексам
+  $(D,A)$ и энергетическому выигрышу $\Delta F$.
+  
+  Обозначим через $C[G]$ топологическую сложность графа (информационный
+  функционал из раздела о сложности), а через $C_{\max}(\mathrm{role})$~---
+  максимальную сложность, достигаемую при росте деревьев, где корневой атом
+  имеет фиксированную роль.
+  
+  Численный эксперимент показывает, что при одинаковых правилах роста
+  выполняется строгий порядок
+  \[
+    C_{\max}(\text{hub}) \gg C_{\max}(\text{bridge}) \gg
+    C_{\max}(\text{terminator}),
+  \]
+  при этом типичные размеры молекул подчиняются тому же неравенству.
+  В частности, для элементов H--Br геометрической Таблицы получаем
+  \[
+    C_{\max}(\text{hub}) \approx 14,\quad
+    C_{\max}(\text{bridge}) \approx 12,\quad
+    C_{\max}(\text{terminator}) \lesssim 5.
+  \]
+  
+  \textbf{Следствие.} ``Живые'' химические каркасы (органика, силикатные
+  структуры) реализуются в основном в хаб-секторе Таблицы
+  ($A\approx 1.24$ для C, N, O, Si, P, S, Ge, As, Se, Br) и в слабом
+  акцепторном подполосе ($A\approx 0.12$ для B, Al, Ga). Терминаторные
+  элементы при тех же правилах роста дают лишь короткие малоразветвлённые
+  структуры.
+  
+  \paragraph{Закон спектральной комплементарности.}
+  
+  Рассмотрим три варианта стохастического роста молекулярных деревьев:
+  
+  \begin{enumerate}
+    \item \textbf{Донорный сценарий:} в пуле роста присутствуют только элементы
+    с донорным индексом $D>0$ и слабой акцепторностью
+    (Li, Na, K, Be, Mg, Ca).
+  
+    \item \textbf{Акцепторный сценарий:} в пуле роста только сильные
+    акцепторы ($A\approx 1.24$: C, N, O, F, Si, P, S, Cl).
+  
+    \item \textbf{Смешанный сценарий:} рост начинается на хаб-ядрах
+    (C, N, O, Si, P, S), а пул роста включает весь спектр ролей H--Br
+    (доноры, мосты, хабы и терминаторы).
+  \end{enumerate}
+  
+  Численные эксперименты показывают, что усреднённая топологическая сложность
+  и характерный размер конфигураций подчиняются иерархии
+  \[
+    \langle C \rangle_{\text{donor}} \ll
+    \langle C \rangle_{\text{acceptor}} <
+    \langle C \rangle_{\text{mixed}},
+  \]
+  аналогично для максимальных сложностей $C_{\max}$ и средних размеров
+  $\langle N \rangle$.
+  
+  В донорном сценарии рост быстро ``захлёбывается'': получаются малые
+  многократно повторяющиеся фрагменты (алканоподобные цепочки). В
+  акцепторном сценарии возможно формирование развитых каркасов, но без
+  чёткой функциональной дифференциации. Максимальная же сложность и
+  разнообразие достигаются только в смешанном сценарии, когда в пуле роста
+  одновременно присутствуют донорные и акцепторные роли.
+  
+  \textbf{Интерпретация.} Для появления богатой иерархической химии достаточно,
+  но и необходимо сосуществование спектрально комплементарных классов
+  элементов: одних лишь доноров или одних акцепторов существенно меньше, чем
+  полного смешанного спектра.
 
+  \paragraph{Закон соответствия спектральной электроотрицательности
+  шкале Паулинга.}
 
-\section{Текущий охват модели (``зелёная зона'')}
+  Спектральная электроотрицательность $\chi_{\text{spec}}(Z)$ в модели
+  определяетcя как знакованная функция от геометрического портового
+  функционала $F_{\text{geom}}$ и эффективной глубины $\varepsilon_{\text{eff}}$,
+  с учётом роли элемента (donor / bridge / hub / terminator).
+  Чтобы сопоставить её со стандартной шкалой Паулинга $\chi_{\text{P}}(Z)$,
+  выполнена линейная калибровка по набору элементов
+  \[
+    \{ \mathrm{H}, \mathrm{Li},\ldots,\mathrm{Cl},\mathrm{K},\mathrm{Ca},
+       \mathrm{Ga},\mathrm{Ge},\mathrm{As},\mathrm{Se},\mathrm{Br} \}
+  \]
+  из геометрической Таблицы.
+
+  Результат метода наименьших квадратов даёт аппроксимацию
+  \[
+    \chi_{\text{P}}(Z) \approx a\,\chi_{\text{spec}}(Z) + b,
+    \qquad a \approx 0.50,\quad b \approx 1.41,
+  \]
+  с средней квадратичной ошибкой порядка $0.4$ по шкале Паулинга.
+  Это означает, что спектральная $\chi_{\text{spec}}$:
+
+  \begin{itemize}
+    \item воспроизводит относительный порядок элементов по
+          электроотрицательности;
+    \item линейно связана с экспериментальной шкалой без необходимости
+          подгонять параметры по каждому элементу отдельно;
+    \item может рассматриваться как \emph{первопринципная} версия
+          электроотрицательности, возникающая из геометрического и
+          спектрального функционалов модели.
+  \end{itemize}
+
+  \paragraph{Закон смешанного спектрального мира.}
+  
+  Для проверки роли различных спектральных секторов в росте сложности
+  рассмотрены три идеализированных сценария:
+  
+  \begin{enumerate}
+    \item мир \emph{чистых доноров} (элементы Li, Na, K, Be, Mg, Ca);
+    \item мир \emph{чистых акцепторов} (C, N, O, F, Si, P, S, Cl);
+    \item \emph{смешанный мир}, включающий доноры, акцепторы и
+          амфотерные элементы (H--Br, кроме инертных газов).
+  \end{enumerate}
+  
+  В каждом сценарии запускался стохастический рост деревьев с
+  ограничениями $N\leq 25$, глубина $\leq 4$, и измерялись средняя и
+  максимальная сложности $C$ и средний размер молекул.
+  
+  Полученные значения показывают чёткую иерархию:
+  
+  \[
+    \langle C\rangle_{\text{donor}} \ll
+    \langle C\rangle_{\text{acceptor}} <
+    \langle C\rangle_{\text{mixed}},
+    \qquad
+    \langle N\rangle_{\text{donor}} \ll
+    \langle N\rangle_{\text{acceptor}} <
+    \langle N\rangle_{\text{mixed}}.
+  \]
+  
+  В мире чистых доноров рост быстро вырождается в небольшие кластеры
+  и ионные пары; в мире чистых акцепторов возникают более сложные, но всё
+  ещё ограниченные по размеру структуры. Лишь в смешанном мире, где
+  донорные и акцепторные плато сочетаются с амфотерной зоной, распределения
+  $C$ и $N$ приобретают длинный хвост: модель порождает широкое
+  разнообразие крупных и топологически сложных молекулярных деревьев.
+  
+  В этом смысле ``живая'' спектральная химия требует не только наличия
+  сильных акцепторов, но и \emph{спектрального смешения} донорных,
+  акцепторных и амфотерных ролей.
+
+\paragraph{Уточнение закона спектрального пояса виртуальных элементов.}
+
+Расширенный скан виртуального элемента $X(p,\varepsilon)$ в области
+\[
+  p = 0,\dots,8,\qquad \varepsilon\in[-10,0]
+\]
+показывает, что при разумных порогах устойчивости (максимальная
+энергия простейших молекул $|F_{\max}|<20$) существует широкий
+\emph{спектральный пояс допустимых} комбинаций $(p,\varepsilon)$.
+
+Для портоносных конфигураций ($p\geq 1$) спектральная
+электроотрицательность $\chi_X$ остаётся в узком интервале
+\[
+  0.1 \lesssim \chi_X \lesssim 2.0,
+\]
+а величины $|F_{\max}|$ гладко растут от $\sim 8$ до $\sim 19$ без
+катастрофических скачков. При $p=0$ модель даёт особый класс
+конфигураций с малой энергией ($|F_{\max}|\approx 5.5$) и неопределённой
+$\chi_X$ --- ``абсолютно инертные'' спектральные капли.
+
+  Реальные элементы Периодической таблицы являются дискретным подмножеством
+  этого пояса. Граница же полного исчезновения устойчивости (слишком
+  мягкие или слишком жёсткие $X$) находится за пределами рассмотренного
+  окна и требует дальнейших исследований.
+
+\subsection{Закон ядерного острова стабильности v0.2}
+
+\paragraph{Определение функционала.}
+В сферическом приближении ядро описывается целыми числами $(Z,N)$ и
+функционалом
+\[
+F_{\text{nuc}}(Z,N)
+=
+-B_{\text{drop}}(Z,N)
++ \lambda_{\text{shell}}\bigl(P_p(Z)+P_n(N)\bigr)
++ F_{\text{pair}}(Z,N),
+\]
+где $B_{\text{drop}}$~--- капельная связующая энергия вида
+\[
+B_{\text{drop}} =
+a_v A - a_s A^{2/3}
+- a_c \frac{Z(Z-1)}{A^{1/3}}
+- a_a \frac{(N-Z)^2}{A},\quad A = Z+N,
+\]
+с коэффициентами $(a_v,a_s,a_c,a_a)$, калиброванными по энергии связи
+нескольких стабильных ядер.
+
+Оболочечная поправка задаётся как сумма протонной и нейтронной ``дистанций''
+до ближайших магических чисел
+\[
+P_p(Z) = \min_{Z_{\text{mag}}\in\{2,8,20,28,50,82,114\}}
+\left(\frac{Z-Z_{\text{mag}}}{\sigma_p}\right)^2,\quad
+P_n(N) = \min_{N_{\text{mag}}\in\{2,8,20,28,50,82,126,184\}}
+\left(\frac{N-N_{\text{mag}}}{\sigma_n}\right)^2,
+\]
+а парный член
+\[
+F_{\text{pair}}(Z,N) =
+\begin{cases}
+-\dfrac{a_p}{\sqrt{A}}, & Z,N\ \text{чётные},\\[4pt]
++\dfrac{a_p}{\sqrt{A}}, & Z,N\ \text{нечётные},\\[4pt]
+0, & \text{иначе},
+\end{cases}
+\]
+отвечает за эффект спаривания нуклонов.
+
+\paragraph{Закон (остров стабильности v0.2).}
+При разумном выборе параметров
+\[
+\sigma_p \sim 6,\quad \sigma_n \sim 8,\quad
+\lambda_{\text{shell}} \sim 20\text{--}40,\quad a_p \sim 10\text{--}15
+\]
+минимумы функционала $F_{\text{nuc}}(Z,N)$ в плоскости
+$Z\in[80,130], N\in[120,210]$ образуют:
+\begin{itemize}
+  \item долину стабильности для лёгких и средних ядер, проходящую вблизи
+        экспериментально наблюдаемых стабильных нуклидов;
+  \item локальный минимум в области
+        $Z \approx 116\text{--}120$, $N \approx 184\text{--}192$,
+        который естественно интерпретируется как
+        \emph{ядерный остров повышенной стабильности}
+        (аналог классического ``island of stability'' супер-тяжёлых элементов).
+\end{itemize}
+Внутри этой модели ядра с чётно-чётными $(Z,N)$ автоматически оказываются
+энергетически предпочтительными, а ядра с нечётно-нечётными $(Z,N)$
+подавляются парной поправкой $F_{\text{pair}}$.
+
+\paragraph{Ограничения формулировки.}
+Данный закон относится к сферическому приближению и использует
+капельно-оболочечный функционал минимальной сложности. В нём не учитываются:
+квадрупольные и высшие деформации, трёхосность,
+динамика деления и канал $\alpha$-распада.
+Магические числа для супер-тяжёлой области задаются явным списком
+$\{Z_{\text{mag}}\}$, $\{N_{\text{mag}}\}$ и могут уточняться по мере появления
+новых микроскопических расчётов и экспериментальных данных.
+Поэтому версия v0.2 рассматривается как рабочий прототип закона острова
+стабильности, а не как финальная ядерная теория.
+
+\paragraph{Долина $\beta$-стабильности в функционале $F_{\text{nuc}}$.}
+
+Для фиксированного атомного номера $Z$ ``предпочтительное'' значение числа
+нейтронов $N_{\text{best}}(Z)$ в версии v0.2 определяется как минимум
+ядерного функционала
+\[
+N_{\text{best}}(Z) = \arg\min_{N} F_{\text{nuc}}(Z,N),
+\]
+где $F_{\text{nuc}}$ задан капельно--оболочечной формулой с парным членом.
+Численный просмотр области $8\le Z\le 82$ показывает, что получающаяся
+долина $\beta$-стабильности носит \emph{ступенчатый} характер по нейтронному
+числу:
+\begin{itemize}
+  \item для лёгких и средних ядер $N_{\text{best}}(Z)$ группируется вокруг
+        магических нейтронных чисел $N\simeq 50, 82, 126$;
+  \item для тяжёлых элементов (область свинца) отношение
+        $N_{\text{best}}/Z$ выходит в диапазон $\sim 1.5\text{--}1.6$,
+        что качественно согласуется с реальной долиной стабильности,
+        хотя модель несколько переоценивает нейтронность;
+  \item для каждого плато по $N$ долина представляет собой гладкую по $Z$
+        ``полку'', которая перескакивает с одного магического значения
+        $N$ на другое по мере роста $Z$.
+\end{itemize}
+Таким образом, один и тот же функционал $F_{\text{nuc}}$ одновременно
+генерирует и ступенчатую долину $\beta$-стабильности, привязанную к
+магическим нейтронным числам, и остров повышенной стабильности в
+области $(Z\approx 116, N\approx 190)$.
+
+\paragraph{Ограничения применимости v0.2 для лёгких ядер.}
+
+Версия v0.2 ядерного функционала построена как минималистичная
+капельно--оболочечная модель, ориентированная прежде всего на
+средние и тяжёлые ядра. В этой схеме:
+
+\begin{itemize}
+  \item капельные коэффициенты $(a_v,a_s,a_c,a_a)$ калибруются по
+        ограниченному набору средних/тяжёлых нуклидов;
+  \item оболочечная поправка $P_{\text{shell}}$ задаётся в виде гладких
+        ``чаш'' вокруг магических чисел и не включает детальную структуру
+        одночастичных уровней и деформаций;
+  \item парный член $F_{\text{pair}}$ учитывает только грубое различие
+        между чётно--чётными и нечётно--нечётными ядрами.
+\end{itemize}
+
+В результате для лёгких элементов ($Z\lesssim 20$) долина
+$\beta$-стабильности в этой модели смещается к заметно
+нейтронобогатым конфигурациям ($N/Z \sim 1.6\text{--}1.7$), что не
+соответствует реальным стабильным изотопам (кислород, неон, магний и т.п.).
+Поэтому в диапазоне малых $Z$ функционал $F_{\text{nuc}}$ следует
+рассматривать лишь как качественную иллюстрацию конкуренции капельной
+и оболочечной энергии, а не как количественную теорию. Рабочей областью
+v0.2 являются, главным образом, средние и тяжёлые ядра с $Z\gtrsim 20\text{--}30$,
+где форма долины и положение острова стабильности описываются на уровне
+правильного сектора $(Z,N)$ карты нуклидов.
+
+\subsection{Спектральная связка ядерной долины и геометрической Таблицы}
+
+\paragraph{Проекция долины $\beta$-стабильности на ось атомного номера.}
+
+Функционал $F_{\text{nuc}}(Z,N)$ в версии v0.2 задаёт для каждого атомного
+номера $Z$ предпочтительное значение числа нейтронов
+\[
+N_{\text{best}}(Z) = \arg\min_{N} F_{\text{nuc}}(Z,N),
+\]
+а значит и эффективную массовую конфигурацию $A(Z) = Z + N_{\text{best}}(Z)$
+в пределах I долины $\beta$-стабильности. Численные сканы по $8\le Z\le 82$
+показывают, что
+\begin{itemize}
+  \item для малых и средних $Z$ значения $N_{\text{best}}(Z)$ группируются
+        на плато вокруг магических нейтронных чисел $N\simeq 50, 82, 126$;
+  \item для тяжёлых элементов (область свинца и выше) отношение
+        $N_{\text{best}}/Z$ выходит в диапазон $\sim 1.5\text{--}1.6$, что
+        согласуется с наблюдаемой долиной стабильности на карте нуклидов;
+  \item в тяжёлой области $80\le Z\le 130$, $120\le N\le 210$ тот же
+        функционал даёт локальный остров повышенной стабильности
+        на even--even-плато вокруг $(Z\approx 116, N\approx 190)$.
+\end{itemize}
+Проекция долины на ось $Z$ тем самым задаёт ``разрешённый'' спектр
+атомных номеров, для которых ядро может существовать в виде одного или
+нескольких долгоживущих минимальных конфигураций $A(Z)$.
+
+\paragraph{Закон ядерно-спектральной совместимости.}
+
+Геометрическая Таблица элементов опирается на независимый набор
+спектрально-геометрических характеристик атома: роль
+(\textit{terminator / bridge / hub / inert}), число портов $p_Z$,
+спектральную электроотрицательность $\chi_{\text{spec}}(Z)$ и
+донорно--акцепторные индексы $(D(Z),A(Z))$. Численные эксперименты
+v4.0 показывают, что:
+
+\begin{itemize}
+  \item \textbf{живые хабы} геометрической Таблицы (элементы
+        \[
+        \mathrm{C, N, O, F, Si, P, S, Cl, Ge, As, Se, Br}
+        \]
+        с $A_{\text{index}}=1.237$ и максимальными значениями
+        геометрической сложности в ростовых процессах) соответствуют
+        именно тем атомным номерам $Z$, для которых долина
+        $\beta$-стабильности v0.2 задаёт широкие по $N$ плато
+        $N_{\text{best}}(Z)$;
+  \item экспериментальная ядерная физика подтверждает, что для этих же
+        $Z$ существует несколько стабильных или долгоживущих изотопов
+        (например, у Ge --- пять стабильных изотопов, у Se --- шесть,
+        у Kr --- несколько стабильных изотопов, у Sn --- десять,
+        у Xe --- девять), что соответствует широким минимумам
+        $F_{\text{nuc}}$ по $N$;
+  \item \textbf{донорные плато} ($D>0$, $A\simeq 0$) для
+        $\mathrm{Li, Na, K}$ и $\mathrm{Be, Mg, Ca}$, а также
+        \textbf{амфотерные хабы} $\mathrm{B, Al, Ga}$ занимают
+        ``окраины'' этих плато: они по-прежнему лежат на долине
+        $N_{\text{best}}(Z)$, но обладают более узкими наборами
+        стабильных конфигураций и меньшей средней сложностью в
+        ёлочном росте.
+\end{itemize}
+
+В этом смысле ядро и электронная оболочка оказываются спектрально
+совместимыми: набор атомных номеров, для которых ядерный функционал
+$F_{\text{nuc}}$ допускает широкие и глубокие минимумы (богатый набор
+стабильных или квазистабильных изотопов), совпадает с набором элементов,
+которые в геометрической Таблице играют роль ``живых'' хабов и носителей
+максимальной структурной сложности. Геометрия и химия здесь выступают
+разными макроскопическими проекциями одного и того же спектрального
+состояния Среды: внутри --- через $F_{\text{nuc}}(Z,N)$, снаружи ---
+через $F_{\text{geom}}$, $\chi_{\text{spec}}$ и ростовые процессы.
+  
+  
+  \section{Текущий охват модели (``зелёная зона'')}
 \label{sec:status-green}
 
 Под ``зелёной зоной'' будем понимать те элементы модели, которые уже
