Add spectral heavy-shell law v0.1 and bridge to F_nuc

--- a/name3.tex
+++ b/name3.tex
@@ -5457,6 +5457,30 @@ v0.2 являются, главным образом, средние и тяжё
 где форма долины и положение острова стабильности описываются на уровне
 правильного сектора $(Z,N)$ карты нуклидов.
 
+\paragraph{Спектральный закон тяжёлой магической оболочки v0.1.}
+Игрушечный сферически-симметричный оператор ядра
+$\hat H_{\text{nuc}}^{\text{toy}}$ (радиальное уравнение с квадратной
+ямой и орбитальным членом $\ell(\ell+1)/r^2$) имеет дискретный спектр
+с вырождениями $g_{n\ell} = 2(2\ell+1)$. При накоплении этих уровней
+по Паули в интегральную функцию $\mathcal{N}(E)$ появляются крупные
+ступени при накопленных числах $N \simeq 92, 184, 214, 256$, которые
+играют роль ``магических'' $N$ в этой простой спектральной модели.
+
+Если фиксировать такие $N$ и рассматривать капельно--оболочечный
+функционал $F_{\text{nuc}}(Z,N)$ v0.2 как функцию от $Z$ (по чётно--чётным
+ядрам), то для $N\simeq 184$ минимум $F_{\text{nuc}}$ достигается в узком
+диапазоне $Z \approx 114$, $A \approx 298$, $N/Z \approx 1.6$, то есть именно
+в той области, где капельно--оболочечная часть модели даёт остров
+повышенной стабильности (114--118, 188--192). Более высокие спектральные
+closure-числа $N \simeq 214, 256$ либо продолжают тянуть минимум
+$F_{\text{nuc}}$ к тому же диапазону $Z$ при существенно худшей
+связанности, либо соответствуют конфигурациям с $F_{\text{nuc}}$,
+практически теряющим отрицательность. Таким образом, первая тяжёлая
+спектральная оболочка ($N\simeq 184$) естественным образом ``садится''
+на тот же участок $(Z,N)$-плоскости, который уже выделен капельно--
+оболочечной моделью как центр острова стабильности, и в этом ограниченном
+смысле v0.2 реализует спектрально согласованный прототип тяжёлой магии.
+
 \subsection{Спектральная связка ядерной долины и геометрической Таблицы}
 
 \paragraph{Проекция долины $\beta$-стабильности на ось атомного номера.}
