Add metallic plateau law and d-block plateau analysis

--- a/name3.tex
+++ b/name3.tex
@@ -4405,6 +4405,24 @@ $F_{\text{mol}} = F_{\text{geom}} + F_{\text{angle}} + F_{\text{flow}}$ на
   \item \textbf{Металлизацию}: бор (B) в этой модели оказывается на стороне доноров ($\chi < 0$), тогда как углерод (C) уже переходит в акцепторы ($\chi > 0$), что соответствует границе металл/неметалл.
 \end{enumerate}
 
+\paragraph{Закон металлического спектрального плато (d-блок v1.0).}
+Продление геометрической Таблицы на переходные металлы первого ряда (Sc--Zn)
+через калиброванную связь спектральной электроотрицательности со шкалой
+Паулинга (линейное соответствие
+$\chi_{\text{P}} \approx a\,\chi_{\text{spec}} + b$) показывает, что
+элементы d-блока образуют отдельное низкоакцепторное ``металлическое''
+плато в плоскости $(D,A)$. При той же нормировке энергетики порта, что и
+для s/p-элементов, s-блок (Li, Na, K; Be, Mg, Ca и др.) формирует донорные
+плато с $D \approx 0{.}19$ или $D \approx 0{.}31$ и $A \approx 0$, а
+живые p-хабы (C, N, O, F, Si, P, S, Cl, Ge, As, Se, Br) лежат на сильном
+акцепторном плато с $A \approx 1{.}237$ и $D \approx 0$. В отличие от них
+элементы Sc--Zn концентрируются в узком диапазоне
+$A \sim 0{.}08\text{--}0{.}17$ при практически нулевом $D$, то есть занимают
+промежуточный металлический сектор между донорным и акцепторным плато.
+В терминах ролей d-блок выступает как множество низкоакцепторных хабов:
+он не является ни чистым донором, ни сильным акцептором, а задаёт третий
+устойчивый класс на карте $(D,A)$, соответствующий переходным металлам.
+
 
  % ==========================
  % ЧАСТЬ VI. ПРОГРАММНЫЙ КОМПЛЕКС
