Hook nuclear_magic_N to WS spectrum and update d-block complexity law

--- a/name3.tex
+++ b/name3.tex
@@ -4409,19 +4409,39 @@ $F_{\text{mol}} = F_{\text{geom}} + F_{\text{angle}} + F_{\text{flow}}$ на
 Продление геометрической Таблицы на переходные металлы первого ряда (Sc--Zn)
 через калиброванную связь спектральной электроотрицательности со шкалой
 Паулинга (линейное соответствие
-$\chi_{\text{P}} \approx a\,\chi_{\text{spec}} + b$) показывает, что
-элементы d-блока образуют отдельное низкоакцепторное ``металлическое''
-плато в плоскости $(D,A)$. При той же нормировке энергетики порта, что и
-для s/p-элементов, s-блок (Li, Na, K; Be, Mg, Ca и др.) формирует донорные
-плато с $D \approx 0{.}19$ или $D \approx 0{.}31$ и $A \approx 0$, а
-живые p-хабы (C, N, O, F, Si, P, S, Cl, Ge, As, Se, Br) лежат на сильном
-акцепторном плато с $A \approx 1{.}237$ и $D \approx 0$. В отличие от них
-элементы Sc--Zn концентрируются в узком диапазоне
-$A \sim 0{.}08\text{--}0{.}17$ при практически нулевом $D$, то есть занимают
-промежуточный металлический сектор между донорным и акцепторным плато.
-В терминах ролей d-блок выступает как множество низкоакцепторных хабов:
-он не является ни чистым донором, ни сильным акцептором, а задаёт третий
-устойчивый класс на карте $(D,A)$, соответствующий переходным металлам.
+$\chi_{\text{P}} \approx a\,\chi_{\text{spec}} + b$) в ранних версиях
+показывало, что элементы d-блока образуют отдельное низкоакцепторное
+``металлическое'' плато в плоскости $(D,A)$: при той же нормировке
+энергетики порта, что и для s/p-элементов, s-блок (Li, Na, K; Be, Mg, Ca и др.)
+формирует донорные плато с $D \approx 0{.}19$ или $D \approx 0{.}31$ и
+$A \approx 0$, а живые p-хабы (C, N, O, F, Si, P, S, Cl, Ge, As, Se, Br)
+лежат на сильном акцепторном плато с $A \approx 1{.}237$ и $D \approx 0$, тогда как
+элементы Sc--Zn концентрируются в узком диапазоне $A \sim 0{.}08\text{--}0{.}17$
+при практически нулевом $D$. После обновлённой калибровки
+$\chi_{\text{spec}}$ и пересчёта индексов D/A для расширенной таблицы
+эти же d-металлы встраиваются в донорное плато ($D_{\text{index}}>0$,
+$A_{\text{index}}\approx 0$), так что ``металлическое'' низко-$A$ плато
+следует рассматривать как исторический прототип v1.0, а не как окончательный
+результат версии v4.0.
+
+\paragraph{Закон металлического супер-хаб-слоя d-блока.}
+В геометрической Таблице d-металлы (Sc--Zn) представлены как октаэдрические
+шестипортовые атомные графы. Ростовые эксперименты с использованием
+«ёлочного» grower'а и топологической сложности $C[G]$ показывают, что по
+сложности d-блок не образует промежуточное плато между донорными
+s-элементами и живыми p-хабами, а уходит на отдельный, более высокий уровень.
+Для трёх групп (доноры, живые p-хабы, d-блок) усреднённая сложность одного
+атома в качестве корня роста при одинаковых параметрах даёт
+\[
+  \langle C_{\text{avg}}\rangle_{\text{donor}} \approx 6.7,\qquad
+  \langle C_{\text{avg}}\rangle_{\text{hub}} \approx 7.7,\qquad
+  \langle C_{\text{avg}}\rangle_{d\text{-block}} \approx 11.5.
+\]
+То есть d-блок формирует \emph{металлический супер-хаб-слой}: по D/A-индексам
+он сливается с донорным плато, но по топологической сложности $C[G]$ даёт
+существенно более богатые молекулярные графы, чем как s-доноры, так и
+p-хабы. В дальнейшем d-металлы будем трактовать как отдельный уровень
+иерархии ``геометрия $\to$ роль $\to$ сложность'', лежащий над p-хабами.
 
 
  % ==========================
